# bert-summarizer

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: pre-commit.yml  python-package.yml  python-publish.yml  python-test-publish.yml
examples/: train_abs.py  train_ext.py
scripts/: migrate_bertsumabs_model.py
src/bert_summarizer/config/: __init__.py  bertsum.py
src/bert_summarizer/data/: __init__.py  data_collator.py
src/bert_summarizer/data/datasets/: __init__.py  bertsum.py
src/bert_summarizer/models/: __init__.py  bertsum.py  embeddings.py  loss.py
src/bert_summarizer/models/bertsum/: __init__.py  abs.py  ext.py
src/bert_summarizer/models/bertsum/abs/: __init__.py  abs.py  decoder.py  onmt_decoder.py
src/bert_summarizer/tokenizers/: __init__.py  bertsum.py
src/bert_summarizer/trainers/: __init__.py  encoder_decoder.py  lr_lambda.py
src/bert_summarizer/utils/: bertsum.py  common.py  logits_process.py  nn.py  package.py
src/bertsum/config/: bertsum.py
src/bertsum/data/: __init__.py  data_collator.py  tokenizer.py
src/bertsum/data/datasets/: bertsum.py
src/bertsum/datasets/: bertsum.py
src/bertsum/models/: bertsum.py  common.py
src/bertsum/models/decoders/: __init__.py  transformer.py
src/bertsum/preprocessing/: bertsum.py  embedding.py  sentencization.py  tokenization.py
src/bertsum/summarizer/: bertsum.py
src/bertsum/summarizers/: __init__.py  bertsum.py
src/bertsum/trainers/: bertsum.py  encoder_decoder.py
src/bertsum/utils/: beam_search.py  tensor.py
tests/config/: test_bertsum.py
tests/data/: test_data_collator.py
tests/data/datasets/: test_bertsum.py
tests/models/: test_bertsum.py
tests/models/bertsum/: test_abs.py  test_ext.py  util.py
tests/trainers/: test_lr_lambda.py
tests/utils/: test_bertsum.py  test_common.py  test_logits_process.py  test_nn.py
