[tool.poetry]
name = "bert-summarizer"
version = "0.0.0"
description = "Text Summarization Library based on transformers"
license = "MIT"
authors = ["k-tahiro <tahiro.k.ad@gmail.com>"]
readme = "README.md"
repository = "https://github.com/k-tahiro/bert-summarizer"
keywords = ["BERT", "Text Summarization"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = ">=3.6.2,<3.9"
ginza = ">=4.0.5,<5.0.0"
transformers = {extras = ["ja", "torch"], version = ">=4.0.0"}
OpenNMT-py = {version = ">=2.0.1", optional = true}

[tool.poetry.dev-dependencies]
tox = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
mypy = "*"
black = "*"

[tool.poetry.extras]
onmt = ["OpenNMT-py"]

[tool.black]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
