# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = bert-summarizer
version = 0.0.0

# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
package_dir =
    = src
packages = find:
install_requires =
    transformers
    torch
    torchvision

[options.packages.find]
where = src
