# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = bert-summarizer
version = 0.0.10
url = https://github.com/k-tahiro/bert-summarizer
author = k-tahiro
author_email = tahiro.k.ad@gmail.com
maintainer = k-tahiro
maintainer_email = tahiro.k.ad@gmail.com
description = Text Summarization Library based on transformers
long_description = file:README.md
long_description_content_type = text/markdown
license_file = LICENSE
python_requires = >=3.6, <3.9
classifiers = 
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
package_dir =
    = src
packages = find:
install_requires =
    ginza>=4.0.5
    OpenNMT-py>=2.0.1
    transformers[ja,torch]>=4.0.0

[options.packages.find]
where = src
